<resources>
    <string name="app_name">GiMi</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="phoneNumber">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="title_activity_main">GiMi</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">注册</string>
    <string name="get_sign_number">短信验证码</string>
    <string name="next_step">下一步</string>
    <string name="phone_number_error">长度为11位</string>
    <string name="signCode">验证码</string>
    <string name="title_activity_chat">chat</string>
    <string name="NewAGroup">新建群</string>

    <string name="NotificaitonEventIntent">quanzi.Notification.BROADCAST</string>
    <string name="menu_zone">空间</string>
    <string name="menu_zone_long">查看圈子的空间</string>
    <string name="title_activity_quanzi_zone">空间</string>
    <string name="title_activity_new_group">新建圈子</string>
    <string name="input_quanzi_name">输入圈圈名称</string>
    <string name="complete">完成</string>
    <string name="isFirstRun">isFirstRun</string>
    <string name="notify_message">消息</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_user_zone">个人空间</string>
    <string name="title_activity_dyns">动态</string>
    <string name="boom_group">碰撞的圈子</string>
    <string name="my_group">自己的圈子</string>
    <string name="share_the_app">一起来分享应用吧!</string>
    <string name="send_dyn">发状态</string>
    <string name="action_send">发送</string>
    <string name="action_comment">评论</string>
    <string name="allow_notice"/>
    <string name="dis_allow_notice">\uD83D\uDD15</string>

    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="title_activity_notify_settings">NotifySettingsActivity</string>
</resources>
