<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LoginLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phoneNumberInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:inputType="number"
            android:textSize="@dimen/normal_edit_text_size" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/normal_edit_text_size" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:text="@string/login" />
</LinearLayout>
