<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.tizi.quanzi.ui.login.ForgetPasswordFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="@dimen/statue_bar_top_padding"
        app:title="重置密码"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phoneNumberInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:inputType="number"
            android:textSize="@dimen/normal_edit_text_size"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/get_sign_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/get_sign_number"
            android:textSize="@dimen/normal_text_size"/>


        <Button
            android:id="@+id/get_voice_sign_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="语音验证码"
            android:textSize="@dimen/normal_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/signEditText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/signCode"
                android:inputType="number"
                android:textSize="@dimen/normal_edit_text_size"
                />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textVisiblePassword"
                android:textSize="@dimen/normal_edit_text_size"/>
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="确定"/>

</LinearLayout>
