<FrameLayout
    style="@style/width_match_parent_max_600"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context="com.tizi.quanzi.ui.login.LoginFragment">

    <TextView
        android:id="@+id/login_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/md_white"
        android:visibility="invisible"
        tools:text="1233333"/>

    <LinearLayout
        android:id="@+id/login_root_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneNumberInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#B6B6B6"
            android:textColorHint="#B6B6B6">

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber"
                android:inputType="number"
                android:textColor="#B6B6B6"
                android:textSize="@dimen/normal_edit_text_size"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#B6B6B6"
            android:textColorHint="#B6B6B6">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="#B6B6B6"
                android:textSize="@dimen/normal_edit_text_size"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="忘记密码？"
            android:textColor="#B6B6B6"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/new_account"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:text="注册"
                android:textColor="#313131"
                android:textSize="@dimen/normal_edit_text_size"/>

            <Button

                android:id="@+id/LoginButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/login"
                android:textColor="#313131"
                android:textSize="@dimen/normal_edit_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/guest_user_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="随意看看"
                android:textColor="#6F6482"
                android:textSize="@dimen/normal_edit_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Copyright (c) 2015 tizi All rights reserved"
                android:textColor="#B6B6B6"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
